@@ -29,54 +29,71 @@
 
 #define VLAD_MAXLEN_IDENT            128
 
-/* base types */
-
-#define VLAD_IDENT_SUB               1   /* 0000 0001 */
-#define VLAD_IDENT_ACC               2   /* 0000 0010 */
-#define VLAD_IDENT_OBJ               3   /* 0000 0011 */
-
 /* masks */
 
-#define VLAD_IDENT_BASE_MASK         3   /* 0000 0011 */
-#define VLAD_IDENT_SIN_MASK          4   /* 0000 0100 */
-#define VLAD_IDENT_GRP_MASK          8   /* 0000 1000 */
-#define VLAD_IDENT_VAR_MASK          16  /* 0001 0000 */
+#define VLAD_IDENT_MASK_NUL          0   /* 0000 0000 */
+#define VLAD_IDENT_MASK_ENT          1   /* 0000 0001 */
+#define VLAD_IDENT_MASK_VAR          2   /* 0000 0010 */
+
+#define VLAD_IDENT_MASK_SUB          4   /* 0000 0100 */
+#define VLAD_IDENT_MASK_ACC          8   /* 0000 1000 */
+#define VLAD_IDENT_MASK_OBJ          12  /* 0000 1100 */
+
+#define VLAD_IDENT_MASK_SIN          16  /* 0001 0000 */
+#define VLAD_IDENT_MASK_GRP          32  /* 0010 0000 */
+#define VLAD_IDENT_MASK_BOT          48  /* 0011 0000 */
+
+#define VLAD_IDENT_MASK_TYPE         3   /* 0000 0011 */
+#define VLAD_IDENT_MASK_BASE         12  /* 0000 1100 */
+#define VLAD_IDENT_MASK_QUTY         48  /* 0011 0000 */
 
 /* identifier types */
 
-#define VLAD_IDENT_NUL               0
+#define VLAD_IDENT_NUL               VLAD_IDENT_MASK_NUL
+#define VLAD_IDENT_ENT               VLAD_IDENT_MASK_ENT
+#define VLAD_IDENT_VAR               VLAD_IDENT_MASK_VAR
+
+/* identifier bases */
+
+#define VLAD_IDENT_SUB               VLAD_IDENT_MASK_SUB
+#define VLAD_IDENT_ACC               VLAD_IDENT_MASK_ACC
+#define VLAD_IDENT_OBJ               VLAD_IDENT_MASK_OBJ
+
+/* entity types */
 
 #define VLAD_IDENT_ENT_SUB_SIN       \
-  (VLAD_IDENT_SUB | VLAD_IDENT_SIN_MASK)
+  (VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_SIN)
 #define VLAD_IDENT_ENT_ACC_SIN       \
-  (VLAD_IDENT_ACC | VLAD_IDENT_SIN_MASK)
+  (VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_SIN)
 #define VLAD_IDENT_ENT_OBJ_SIN       \
-  (VLAD_IDENT_OBJ | VLAD_IDENT_SIN_MASK)
+  (VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_SIN)
 #define VLAD_IDENT_ENT_SUB_GRP       \
-  (VLAD_IDENT_SUB | VLAD_IDENT_GRP_MASK)
+  (VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_GRP)
 #define VLAD_IDENT_ENT_ACC_GRP       \
-  (VLAD_IDENT_ACC | VLAD_IDENT_GRP_MASK)
+  (VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_GRP)
 #define VLAD_IDENT_ENT_OBJ_GRP       \
-  (VLAD_IDENT_OBJ | VLAD_IDENT_GRP_MASK)
+  (VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_GRP)
+
+/* variable types */
 
 #define VLAD_IDENT_VAR_SUB           \
-  (VLAD_IDENT_SUB | VLAD_IDENT_SIN_MASK | VLAD_IDENT_GRP_MASK | VLAD_IDENT_VAR_MASK)
+  (VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_GRP | VLAD_IDENT_MASK_VAR)
 #define VLAD_IDENT_VAR_ACC           \
-  (VLAD_IDENT_ACC | VLAD_IDENT_SIN_MASK | VLAD_IDENT_GRP_MASK | VLAD_IDENT_VAR_MASK)
+  (VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_GRP | VLAD_IDENT_MASK_VAR)
 #define VLAD_IDENT_VAR_OBJ           \
-  (VLAD_IDENT_OBJ | VLAD_IDENT_SIN_MASK | VLAD_IDENT_GRP_MASK | VLAD_IDENT_VAR_MASK)
+  (VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_GRP | VLAD_IDENT_MASK_VAR)
 #define VLAD_IDENT_VAR_SUB_SIN       \
-  (VLAD_IDENT_SUB | VLAD_IDENT_SIN_MASK | VLAD_IDENT_VAR_MASK)
+  (VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_VAR)
 #define VLAD_IDENT_VAR_ACC_SIN       \
-  (VLAD_IDENT_ACC | VLAD_IDENT_SIN_MASK | VLAD_IDENT_VAR_MASK)
+  (VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_VAR)
 #define VLAD_IDENT_VAR_OBJ_SIN       \
-  (VLAD_IDENT_OBJ | VLAD_IDENT_SIN_MASK | VLAD_IDENT_VAR_MASK)
+  (VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_VAR)
 #define VLAD_IDENT_VAR_SUB_GRP       \
-  (VLAD_IDENT_SUB | VLAD_IDENT_GRP_MASK | VLAD_IDENT_VAR_MASK)
+  (VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_GRP | VLAD_IDENT_MASK_VAR)
 #define VLAD_IDENT_VAR_ACC_GRP       \
-  (VLAD_IDENT_ACC | VLAD_IDENT_GRP_MASK | VLAD_IDENT_VAR_MASK)
+  (VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_GRP | VLAD_IDENT_MASK_VAR)
 #define VLAD_IDENT_VAR_OBJ_GRP       \
-  (VLAD_IDENT_OBJ | VLAD_IDENT_GRP_MASK | VLAD_IDENT_VAR_MASK)
+  (VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_GRP | VLAD_IDENT_MASK_VAR)
 
 /* total number of types */
 
@@ -85,19 +102,28 @@
 
 /* additional macros */
 
-#define VLAD_IDENT_TYPE_BASETYPE(X)  ((X) & VLAD_IDENT_BASE_MASK)
+#define VLAD_IDENT_TYPE_BASE(X)      ((X) & VLAD_IDENT_MASK_BASE)
 
 #define VLAD_IDENT_TYPE_IS_SUB(X)    \
-  (((X) & VLAD_IDENT_BASE_MASK) == VLAD_IDENT_SUB)
+  (((X) & VLAD_IDENT_MASK_BASE) == VLAD_IDENT_MASK_SUB)
 
 #define VLAD_IDENT_TYPE_IS_ACC(X)    \
-  (((X) & VLAD_IDENT_BASE_MASK) == VLAD_IDENT_ACC)
+  (((X) & VLAD_IDENT_MASK_BASE) == VLAD_IDENT_MASK_ACC)
 
 #define VLAD_IDENT_TYPE_IS_OBJ(X)    \
-  (((X) & VLAD_IDENT_BASE_MASK) == VLAD_IDENT_OBJ)
+  (((X) & VLAD_IDENT_MASK_BASE) == VLAD_IDENT_MASK_OBJ)
 
-#define VLAD_IDENT_TYPE_IS_SIN(X)    ((X) & VLAD_IDENT_SIN_MASK)
-#define VLAD_IDENT_TYPE_IS_GRP(X)    ((X) & VLAD_IDENT_GRP_MASK)
+#define VLAD_IDENT_TYPE_IS_SIN(X)    \
+  (((X) & VLAD_IDENT_MASK_QUTY) == VLAD_IDENT_MASK_SIN)
+
+#define VLAD_IDENT_TYPE_IS_GRP(X)    \
+  (((X) & VLAD_IDENT_MASK_QUTY) == VLAD_IDENT_MASK_GRP)
+
+#define VLAD_IDENT_TYPE_IS_ENT(X)    \
+  (((X) & VLAD_IDENT_MASK_TYPE) == VLAD_IDENT_MASK_ENT)
+
+#define VLAD_IDENT_TYPE_IS_VAR(X)    \
+  (((X) & VLAD_IDENT_MASK_TYPE) == VLAD_IDENT_MASK_VAR)
 
 /* a helper class containing static functions to validate identifiers */
 
