@@ -123,7 +123,7 @@ unsigned int vlad_mapper::compute_memb(unsigned char a_type,
   if (!m_init)
     return 0;
 
-  switch(VLAD_IDENT_TYPE_BASETYPE(a_type)) {
+  switch(VLAD_IDENT_TYPE_BASE(a_type)) {
     case VLAD_IDENT_SUB :
       return compute_fact(get_totals(VLAD_ATOM_HOLDS) +
                           (a_elt * VLAD_LEN_SG) +
@@ -160,7 +160,7 @@ unsigned int vlad_mapper::compute_subst(unsigned char a_type,
   if (!m_init)
     return 0;
 
-  switch(VLAD_IDENT_TYPE_BASETYPE(a_type)) {
+  switch(VLAD_IDENT_TYPE_BASE(a_type)) {
     case VLAD_IDENT_SUB :
       return compute_fact(get_totals(VLAD_ATOM_HOLDS) +
                           get_totals(VLAD_ATOM_MEMBER) +
@@ -380,7 +380,7 @@ int vlad_mapper::encode_memb(const char *a_elt,
   /* verify */
   if (VLAD_IDENT_TYPE_IS_GRP(type[0]) || !VLAD_IDENT_TYPE_IS_GRP(type[1]))
     return VLAD_INVALIDINPUT;
-  if (VLAD_IDENT_TYPE_BASETYPE(type[0]) != VLAD_IDENT_TYPE_BASETYPE(type[1]))
+  if (VLAD_IDENT_TYPE_BASE(type[0]) != VLAD_IDENT_TYPE_BASE(type[1]))
     return VLAD_INVALIDINPUT;
 
   *a_id = compute_memb(type[0], index[0], index[1], a_state, a_truth);
@@ -408,7 +408,7 @@ int vlad_mapper::encode_subst(const char *a_grp1,
   /* verify */
   if (!VLAD_IDENT_TYPE_IS_GRP(type[0]) || !VLAD_IDENT_TYPE_IS_GRP(type[1]))
     return VLAD_INVALIDINPUT;
-  if (VLAD_IDENT_TYPE_BASETYPE(type[0]) != VLAD_IDENT_TYPE_BASETYPE(type[1]))
+  if (VLAD_IDENT_TYPE_BASE(type[0]) != VLAD_IDENT_TYPE_BASE(type[1]))
     return VLAD_INVALIDINPUT;
 
   *a_id = compute_subst(type[0], index[0], index[1], a_state, a_truth);
